--- a/idex.html
+++ b/idex.html
@@ -1,11 +1,11 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width">
     </head>
     <body>
-        <h1>THIS IS MY SDEV255</h1>
+        <h1>Welcome to Nick Gerth's Website</h1>
         <p>work please</p>
     </body>
 </html>
